again few issues